# xfinder

./: .gitignore  README.md  XFinder.spec  download_flet.py  generated-58342f226e70d21abfc976dad56dc35c2b2c89476b3484aebc0e133284cb622a.icns  install.sh  install_flet.sh  main.py  pack.sh  pyproject.toml  test_config.py  test_sdk.py  需求文档.md
examples/: sdk_example.py
src/xfinder/: __init__.py  app.py  config.py  indexer.py  main.py  sdk.py  searcher.py
src/xfinder/resource/: logo.icns
tests/: test_config.py  test_searcher.py
